# opencv_imgui_viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cv2viewer.cpp
